--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/shaunwarman/daily-reads/issues"
   },
-  "homepage": "https://github.com/shaunwarman/daily-reads#readme"
+  "homepage": "https://github.com/shaunwarman/daily-reads#readme",
+  "dependencies": {
+    "node-cron": "^1.0.0",
+    "wreck": "^7.0.0"
+  }
 }
