--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple cron job for daily emails of your selected choice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,16 @@
   },
   "homepage": "https://github.com/shaunwarman/daily-reads#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "node-cron": "^1.0.0",
+    "nodemailer": "^2.1.0",
     "wreck": "^7.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-3": "^6.3.13",
+    "babel-runtime": "^6.3.19"
   }
 }
